--- a/EyeemMemory/EyeemMemory/MainPage.xaml
+++ b/EyeemMemory/EyeemMemory/MainPage.xaml
@@ -27,7 +27,9 @@
         </StackPanel>
 
         <!--ContentPanel - zusätzliche Inhalte hier platzieren-->
-        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0"></Grid>
+        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
+            <Button Content="Connect Server" Height="72" HorizontalAlignment="Left" Margin="99,117,0,0" Name="button1" VerticalAlignment="Top" Width="250" Click="button1_Click" />
+        </Grid>
     </Grid>
  
     <!--Beispielcode für die Verwendung von ApplicationBar-->
